--- a/src/view/index.ejs
+++ b/src/view/index.ejs
@@ -1,7 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%= require('./header.ejs')() %>
-<body>
-    <p>view</p>
-</body>
+  <head>
+    <%= require('./layout/header-common.ejs')() %>
+    <title>Happy Mall</title>
+  </head>
+
+  <body>
+      <%= require('./layout/nav.ejs')() %>
+      <%= require('./layout/header.ejs')() %>
+      <div class="page-wrap w">
+        <%= require('./layout/nav-side.ejs')() %>
+        <div class="content with-nav">content test</div>
+      </div>
+  
+      
+      <!-- <div id="app">
+        <div id="info"></div>
+          <div class="bg-pic">picture change again</div>
+          <div><i class="fa fa-camera"></i>font example</div>
+        </div>
+      </div> -->
+      <%= require('./layout/footer.ejs')() %>
+  </body>
 </html>
